--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>getting-started-tomcat</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>getting-started-tomcat Maven Webapp</name>
+  <name>getting-started-tomcat Maven Webapp data</name>
   <url>http://maven.apache.org</url>
 
 
